--- a/index.html
+++ b/index.html
@@ -7,37 +7,48 @@
 			Banner Animation
 		</title>
 		<link rel="stylesheet" type="text/css" href="css/main.css">
-		<!--[if lte IE 9]>
-    		<link rel="stylesheet" type="text/css" href="css/ie9.css">
-		<![endif]-->
 	</head>
 	<body>
 		<div class="banner-container">
 			<div class="logo zindex-top">&nbsp;</div>
-			<div class="title1 zindex-normal">&nbsp;</div>
-			<div class="title2 zindex-normal">&nbsp;</div>
+			<div class="plate-container title1-container">
+				<div class="title1 zindex-normal">&nbsp;</div>
+			</div>
+			<div class="plate-container title2-container">
+				<div class="title2 zindex-normal">&nbsp;</div>
+			</div>	
 			
-			<div class="plate1 zindex-normal">&nbsp;</div>
+			<div class="plate1-container plate-container zindex-normal">
+				<div class="plate1 zindex-normal">&nbsp;</div>
+			</div>
 			
-			<div class="platt2-container plate-container zindex-normal">
+			<div class="plate2-container plate-container zindex-normal">
 				<div class="plate2 zindex-normal">
-					<div class="text2">&nbsp;</div>
 				</div>
 			</div>
+			<div class="text2-container plate-container zindex-normal">
+				<div class="text2">&nbsp;</div>
+			</div>
 
-			<div class="platt3-container plate-container zindex-normal">
+			<div class="plate3-container plate-container zindex-normal">
 				<div class="plate3 zindex-normal">
-					<div class="text3">&nbsp;</div>
 				</div>
 			</div>
+			<div class="text3-container plate-container zindex-normal">
+				<div class="text3">&nbsp;</div>
+			</div>
 
-			<div class="platt4-container plate-container zindex-normal">
+			<div class="plate4-container plate-container zindex-normal">
 				<div class="plate4 zindex-normal">
-					<div class="text4">&nbsp;</div>
 				</div>
 			</div>
+			<div class="text4-container plate-container zindex-normal">
+				<div class="text4">&nbsp;</div>
+			</div>
 
-			<div class="plate5 zindex-normal">&nbsp;</div>
+			<div class="plate5-container plate-container zindex-normal">
+				<div class="plate5 zindex-normal">&nbsp;</div>
+			</div>
 
 			<a href="#" title="" class="button zindex-top">&nbsp;</a>
 		</div>
