--- a/2016-01-16/source/160x600/index.html
+++ b/2016-01-16/source/160x600/index.html
@@ -9,12 +9,23 @@
 		<link rel="stylesheet" type="text/css" href="./css/main.css">
 	</head>
 	<body>
-		<div class="banner-container">
-			<div class="text1-container">
+		<div class="banner-container container">
+			<div class="cup-container container">
+				<div class="cup">&nbsp;</div>
+			</div>
+			<div class="thousand-text-container container">
+				<div class="thousand-text">&nbsp;</div>
+			</div>
+			<div class="logo">&nbsp;</div>
+
+			<div class="text1-container container">
 				<div class="text1">&nbsp;</div>
 			</div>
-			<div class="text2-container">
+			<div class="text2-container container">
 				<div class="text2">&nbsp;</div>
+			</div>
+			<div class="rollover-text-container container">
+				<div class="rollover-text">&nbsp;</div>
 			</div>
 		</div>
 	</body>
