Change images and hide replay buttons for banners - 300x250 and 728x90

--- a/2016-02-06/source/007309_02_Because_728x90/007309_02_Because_728x90.html
+++ b/2016-02-06/source/007309_02_Because_728x90/007309_02_Because_728x90.html
@@ -8,6 +8,9 @@
     <script type="text/javascript" charset="utf-8" src="http://animate.adobe.com/runtime/6.0.0/edge.6.0.0.min.js"></script>
     <style>
         .edgeLoad-EDGE-85618400 { visibility:hidden; }
+        .Stage_reloadButton_id{
+            display: none !important;
+        }
     </style>
 <script>
    AdobeEdge.loadComposition('007309_02_Because_728x90', 'EDGE-85618400', {
