--- a/2016-02-21/source/300x250/index.html
+++ b/2016-02-21/source/300x250/index.html
@@ -10,52 +10,24 @@
 	</head>
 	<body>
 		<div class="banner-container container">
-			<div class="es-container container">
-				<div class="es-content container">
-					<div class="es-text">&nbsp;</div>
-					<div class="es-logo">&nbsp;</div>
-					<div class="es-tap">&nbsp;</div>
-					<div class="es-option">&nbsp;</div>
+			<div class="banner-content container">
+				<div class="bg-container container">
+					<div class="bg container">&nbsp;</div>
 				</div>
-			</div>
-			<div class="is-container container">
-				<div class="is-content container">
-					<div class="is-text">&nbsp;</div>
-					<div class="is-logo">&nbsp;</div>
-					<div class="is-tap">&nbsp;</div>
-					<div class="is-option">&nbsp;</div>
+				<div class="exclusive-container container">
+					<div class="exclusive-text">&nbsp;</div>
 				</div>
-			</div>
-			<div class="awd-container container">
-				<div class="awd-content container">
-					<div class="awd-text">&nbsp;</div>
-					<div class="awd-logo">&nbsp;</div>
-					<div class="awd-tap">&nbsp;</div>
-					<div class="awd-option">&nbsp;</div>
+				<div class="nicolette-container container">
+					<div class="nicolette-text">&nbsp;</div>
 				</div>
-			</div>
-			<div class="nx-container container">
-				<div class="nx-content container">
-					<div class="nx-text">&nbsp;</div>
-					<div class="nx-logo">&nbsp;</div>
-					<div class="nx-tap">&nbsp;</div>
-					<div class="nx-option">&nbsp;</div>
+				<div class="cocktail-container container">
+					<div class="cocktail-text">&nbsp;</div>
 				</div>
-			</div>
-			<div class="rx-container container">
-				<div class="rx-content container">
-					<div class="rx-text-container container">
-						<div class="rx-text">&nbsp;</div>
-					</div>
-					<div class="rx-logo-container container">
-						<div class="rx-logo">&nbsp;</div>
-					</div>
-					<div class="rx-tap-container container">
-						<div class="rx-tap">&nbsp;</div>
-					</div>
-					<div class="rx-option-container container">
-						<div class="rx-option">&nbsp;</div>
-					</div>
+				<div class="now-available-container container">
+					<div class="now-available-text">&nbsp;</div>
+				</div>
+				<div class="hover-container container">
+					<div class="hover-text">&nbsp;</div>
 				</div>
 			</div>
 		</div>
