--- a/2016-02-23/source/728x90/index.html
+++ b/2016-02-23/source/728x90/index.html
@@ -10,26 +10,32 @@
 	</head>
 	<body>
 		<div class="banner-container container">
-			<div class="banner-content container">
-				<div class="bg-container container">
-					<div class="bg container">&nbsp;</div>
-				</div>
-				<div class="exclusive-container container">
-					<div class="exclusive-text">&nbsp;</div>
-				</div>
-				<div class="nicolette-container container">
-					<div class="nicolette-text">&nbsp;</div>
-				</div>
-				<div class="cocktail-container container">
-					<div class="cocktail-text">&nbsp;</div>
-				</div>
-				<div class="now-available-container container">
-					<div class="now-available-text">&nbsp;</div>
-				</div>
-				<div class="hover-container container">
-					<div class="hover-text">&nbsp;</div>
+			<div class="frame1-container container">
+				<div class="frame1-content container">
+					<div class="frame1-bg container">&nbsp;</div>
+					<div class="frame1-text">&nbsp;</div>
 				</div>
 			</div>
+			<div class="frame2-container container">
+				<div class="frame2-content container">
+					<div class="frame2-bg container">&nbsp;</div>
+					<div class="frame2-text">&nbsp;</div>
+				</div>
+			</div>
+			<div class="frame3-container container">
+				<div class="frame3-content container">
+					<div class="frame3-bg container">&nbsp;</div>
+					<div class="frame3-text-container container">
+						<div class="frame3-text-content container">
+							<div class="frame3-text">&nbsp;</div>
+						</div>
+					</div>
+					<div class="cta-container container">
+						<div class="cta-text">&nbsp;</div>
+					</div>
+				</div>
+			</div>
+			<div class="color-bar">&nbsp;</div>
 		</div>
 	</body>
 </html>
