--- a/2016-02-25/source/320x50.html
+++ b/2016-02-25/source/320x50.html
@@ -6,36 +6,31 @@
 		<title>
 			Banner Animation
 		</title>
-		<link rel="stylesheet" type="text/css" href="./css/main.css">
+		<link rel="stylesheet" type="text/css" href="320x50.css">
 	</head>
 	<body>
 		<div class="banner-container container">
 			<div class="frame1-container container">
-				<div class="frame1-content container">
-					<div class="frame1-bg container">&nbsp;</div>
-					<div class="frame1-text">&nbsp;</div>
-				</div>
+				<div class="frame1-image container">&nbsp;</div>
 			</div>
 			<div class="frame2-container container">
-				<div class="frame2-content container">
-					<div class="frame2-bg container">&nbsp;</div>
-					<div class="frame2-text">&nbsp;</div>
-				</div>
+				<div class="frame2-image container">&nbsp;</div>
 			</div>
 			<div class="frame3-container container">
-				<div class="frame3-content container">
-					<div class="frame3-bg container">&nbsp;</div>
-					<div class="frame3-text-container container">
-						<div class="frame3-text-content container">
-							<div class="frame3-text">&nbsp;</div>
-						</div>
-					</div>
-					<div class="cta-container container">
-						<div class="cta-text">&nbsp;</div>
-					</div>
-				</div>
+				<div class="frame3-image container">&nbsp;</div>
 			</div>
-			<div class="color-bar">&nbsp;</div>
+			<div class="logo-container container">
+				<div class="logo">&nbsp;</div>
+			</div>
+			<div class="text-container container">
+				<div class="text">&nbsp;</div>
+			</div>
+			<div class="footer-container container">
+				<div class="footer">&nbsp;</div>
+			</div>
+			<div class="cta-container container">
+				<div class="cta">&nbsp;</div>
+			</div>
 		</div>
 	</body>
 </html>
