--- a/2016-03-13/source/300x250.html
+++ b/2016-03-13/source/300x250.html
@@ -10,33 +10,28 @@
 	</head>
 	<body>
 		<div class="banner-container container">
-			<div class="frame-container container">
-				<div class="frame-content container">
-					<div class="frame-bg-container container">
-						<div class="frame-bg container">
-							<div class="frame-bg-color-content container">
-								<div class="frame-bg-color container">&nbps;</div>
-							</div>
-						</div>
+			<div class="content-container container">
+				<div class="content container">
+					<div class="logo-container container">
+						<div class="logo">&nbsp;</div>
 					</div>
-					<div class="frame-car-back container">&nbsp;</div>
-					<div class="frame-bird-container container">
-						<div class="frame-bird">&nbsp;</div>
+					<div class="header-container container">
+						<div class="header">&nbsp;</div>
 					</div>
-					<div class="frame-car-front">&nbsp;</div>
+					<div class="subheader-container container">
+						<div class="subheader">&nbsp;</div>
+					</div>
+					<div class="action-container container">
+						<div class="action">&nbsp;</div>
+					</div>
+					<div class="intel-kicker-container container">
+						<div class="intel-kicker">&nbsp;</div>
+					</div>
+					<div class="image-container container">
+						<div class="image">&nbsp;</div>
+					</div>
+					<div class="frame container"></div>
 				</div>
-			</div>
-			<div class="logo-container container">
-				<div class="logo">&nbsp;</div>
-			</div>
-			<div class="text-container container">
-				<div class="text">&nbsp;</div>
-			</div>
-			<div class="footer-container container">
-				<div class="footer">&nbsp;</div>
-			</div>
-			<div class="cta-container container">
-				<div class="cta">&nbsp;</div>
 			</div>
 		</div>
 	</body>
