--- a/2016-03-13/source/320x50.html
+++ b/2016-03-13/source/320x50.html
@@ -10,26 +10,25 @@
 	</head>
 	<body>
 		<div class="banner-container container">
-			<div class="frame1-container container">
-				<div class="frame1-image container">&nbsp;</div>
-			</div>
-			<div class="frame2-container container">
-				<div class="frame2-image container">&nbsp;</div>
-			</div>
-			<div class="frame3-container container">
-				<div class="frame3-image container">&nbsp;</div>
-			</div>
-			<div class="logo-container container">
-				<div class="logo">&nbsp;</div>
-			</div>
-			<div class="text-container container">
-				<div class="text">&nbsp;</div>
-			</div>
-			<div class="footer-container container">
-				<div class="footer">&nbsp;</div>
-			</div>
-			<div class="cta-container container">
-				<div class="cta">&nbsp;</div>
+			<div class="content-container container">
+				<div class="content container">
+					<div class="logo-container container">
+						<div class="logo">&nbsp;</div>
+					</div>
+					<div class="header-container container">
+						<div class="header">&nbsp;</div>
+					</div>
+					<div class="action-container container">
+						<div class="action">&nbsp;</div>
+					</div>
+					<div class="intel-kicker-container container">
+						<div class="intel-kicker">&nbsp;</div>
+					</div>
+					<div class="image-container container">
+						<div class="image">&nbsp;</div>
+					</div>
+					<div class="frame container"></div>
+				</div>
 			</div>
 		</div>
 	</body>
