--- a/2016-03-18/source/1280x100.html
+++ b/2016-03-18/source/1280x100.html
@@ -6,34 +6,25 @@
 		<title>
 			Banner Animation
 		</title>
-		<link rel="stylesheet" type="text/css" href="728x90.css">
+		<link rel="stylesheet" type="text/css" href="1280x100.css">
 	</head>
 	<body>
 		<div class="banner-container container">
 			<div class="content-container container">
 				<div class="content container">
-					<div class="dell-logo-container container">
-						<div class="dell-logo">&nbsp;</div>
+					<div class="man-container container">
+						<div class="man">&nbsp;</div>
 					</div>
-					<div class="barrel-icon-container container">
-						<div class="barrel-icon">&nbsp;</div>
+					<div class="title-container container">
+						<div class="title">&nbsp;</div>
 					</div>
-					<div class="flash-forward-container container">
-						<div class="flash-forward">&nbsp;</div>
+					<div class="date-container container">
+						<div class="date">&nbsp;</div>
 					</div>
-					<div class="expert-advice-container container">
-						<div class="expert-advice">&nbsp;</div>
+					<div class="cta-container container">
+						<div class="cta">&nbsp;</div>
 					</div>
-					<div class="action-container container">
-						<div class="action">&nbsp;</div>
-					</div>
-					<div class="intel-logo-container container">
-						<div class="intel-logo">&nbsp;</div>
-					</div>
-					<div class="intel-inside-container container">
-						<div class="intel-inside">&nbsp;</div>
-					</div>
-					<div class="frame container"></div>
+					<div class="logo"></div>
 				</div>
 			</div>
 		</div>
