--- a/2016-03-23/source/manitoba/728x90.html
+++ b/2016-03-23/source/manitoba/728x90.html
@@ -40,6 +40,7 @@
 							<div class="frame5-more-info">&nbsp;</div>
 						</div>
 					</div>
+					<div class="border">&nbsp;</div>
 				</div>
 			</div>
 		</div>
