--- a/2016-03-23/source/manitoba/970x66.html
+++ b/2016-03-23/source/manitoba/970x66.html
@@ -12,17 +12,33 @@
 		<div class="banner-container container">
 			<div class="content-container container">
 				<div class="content container">
-					<div class="man-container container">
-						<div class="man">&nbsp;</div>
-					</div>
-					<div class="title-container container">
-						<div class="title">&nbsp;</div>
-					</div>
-					<div class="date-container container">
-						<div class="date">&nbsp;</div>
-					</div>
-					<div class="cta-container container">
+					<div class="static-text">&nbsp;</div>
+					<div class="static-car">&nbsp;</div>
+					<div class="static-cta-container">
+						<div class="lockup">&nbsp;</div>
 						<div class="cta">&nbsp;</div>
+					</div>
+					<div class="frame5-logo-container container">
+						<div class="frame5-logo">&nbsp;</div>
+					</div>
+
+					<div class="frame1-container container">
+						<div class="frame1-content">&nbsp;</div>
+					</div>
+					<div class="frame2-container container">
+						<div class="frame2-content">&nbsp;</div>
+					</div>
+					<div class="frame3-container container">
+						<div class="frame3-content">&nbsp;</div>
+					</div>
+					<div class="frame4-container container">
+						<div class="frame4-content">&nbsp;</div>
+					</div>
+					<div class="frame5-container container">
+						<div class="frame5-content container">
+							<div class="frame5-text">&nbsp;</div>
+							<div class="frame5-more-info">&nbsp;</div>
+						</div>
 					</div>
 				</div>
 			</div>
