--- a/2016-03-23/source/manitoba/300x250.html
+++ b/2016-03-23/source/manitoba/300x250.html
@@ -13,25 +13,21 @@
 			<div class="content-container container">
 				<div class="content container">
 					<div class="static-car">&nbsp;</div>
-					<div class="static-text">&nbsp;</div>
 					<div class="lockup">&nbsp;</div>
-					<div class="cta">&nbsp;</div>
-					<div class="more-info">&nbsp;</div>
-
-					<div class="frame1-container container">
-						<div class="frame1-content">&nbsp;</div>
+					<div class="text-container container">
+						<div class="static-text">&nbsp;</div>
 					</div>
-					<div class="frame2-container container">
-						<div class="frame2-content">&nbsp;</div>
+					<div class="logo-container container">
+						<div class="logo">&nbsp;</div>
 					</div>
-					<div class="frame3-container container">
-						<div class="frame3-content">&nbsp;</div>
+					<div class="price-container container">
+						<div class="price">&nbsp;</div>
 					</div>
-					<div class="frame4-container container">
-						<div class="frame4-content">&nbsp;</div>
+					<div class="cta-container container">
+						<div class="cta">&nbsp;</div>
 					</div>
-					<div class="frame5-container container">
-						<div class="frame5-content">&nbsp;</div>
+					<div class="more-info-container container">
+						<div class="more-info">&nbsp;</div>
 					</div>
 					<div class="border">&nbsp;</div>
 				</div>
