--- a/2016-03-31/source/300x250.html
+++ b/2016-03-31/source/300x250.html
@@ -18,17 +18,15 @@
 							<div class="frame1-logo absolute">&nbsp;</div>
 						</div>
 					</div>
-					<div class="frame2-container container">
-						<div class="frame2 container">
-							<div class="frame2-logo absolute">&nbsp;</div>
-							<div class="frame2-icon absolute">&nbsp;</div>
-							<div class="frame2-person absolute">&nbsp;</div>
-						</div>
-					</div>
 					<div class="frame3-container container">
 						<div class="frame3 container">
 							<div class="frame3-logo absolute">&nbsp;</div>
-							<div class="frame3-bayer absolute">&nbsp;</div>
+							<div class="frame2-icon-container container">
+								<div class="frame2-icon absolute">&nbsp;</div>
+							</div>
+							<div class="frame3-bayer-container container">
+								<div class="frame3-bayer absolute">&nbsp;</div>
+							</div>
 							<div class="frame3-text-container container">
 								<div class="frame3-text absolute">&nbsp;</div>
 							</div>
