--- a/2016-03-31/source/300x600.html
+++ b/2016-03-31/source/300x600.html
@@ -12,34 +12,25 @@
 		<div class="banner-container container">
 			<div class="content-container container">
 				<div class="content container">
-					<div class="frame1-container container">
-						<div class="frame1 container">
-							<div class="frame1-text absolute">&nbsp;</div>
-							<div class="frame1-logo absolute">&nbsp;</div>
-						</div>
+					<div class="frame1-logo absolute">&nbsp;</div>
+					<div class="frame1-text-container container">
+						<div class="frame1-text absolute">&nbsp;</div>
 					</div>
-					<div class="frame2-container container">
-						<div class="frame2 container">
-							<div class="frame2-logo absolute">&nbsp;</div>
-							<div class="frame2-icon absolute">&nbsp;</div>
-							<div class="frame2-person absolute">&nbsp;</div>
-						</div>
+					<div class="frame2-icon-container container">
+						<div class="frame2-icon absolute">&nbsp;</div>
 					</div>
-					<div class="frame3-container container">
-						<div class="frame3 container">
-							<div class="frame3-logo absolute">&nbsp;</div>
-							<div class="frame3-bayer absolute">&nbsp;</div>
-							<div class="frame3-text-container container">
-								<div class="frame3-text absolute">&nbsp;</div>
-							</div>
-							<div class="frame3-person-container container">
-								<div class="frame3-person absolute">&nbsp;</div>
-							</div>
+					<div class="frame3-bayer-container container">
+						<div class="frame3-bayer absolute">&nbsp;</div>
+					</div>
+					<div class="frame3-text-container container">
+						<div class="frame3-text absolute">&nbsp;</div>
+					</div>
+					<div class="frame3-person-container container">
+						<div class="frame3-person absolute">&nbsp;</div>
+					</div>
 
-							<div class="frame3-cta-container container">
-								<div class="frame3-cta absolute">&nbsp;</div>
-							</div>
-						</div>
+					<div class="frame3-cta-container container">
+						<div class="frame3-cta absolute">&nbsp;</div>
 					</div>
 
 					<div class="border container">&nbsp;</div>
