--- a/2016-04-10/source/320x50.html
+++ b/2016-04-10/source/320x50.html
@@ -12,57 +12,25 @@
 		<div class="banner-container container">
 			<div class="content-container container">
 				<div class="content container">
-					<div class="frame1-container container">
-						<div class="frame1 container">
-							<div class="frame1-noise1 container">&nbsp;</div>
-							<div class="frame1-noise2 container">&nbsp;</div>
-							<div class="frame1-are-you absolute"></div>
-							<div class="frame1-ready absolute">&nbsp;</div>
+					<div class="background container">&nbsp;</div>
+					<div class="cake1-container container">
+						<div class="cake1-content container">
+							<div class="cake1 absolute">&nbsp;</div>
 						</div>
 					</div>
-					<div class="frame2-container container">
-						<div class="frame2 container">
-							<div class="frame2-lip-container container">
-								<div class="frame2-lip absolute">&nbsp;</div>
-							</div>
-							<div class="frame3-text-container container">
-								<div class="frame-text1 absolute">&nbsp;</div>
-								<div class="frame-text2 absolute">&nbsp;</div>
-								<div class="frame-text3 absolute">&nbsp;</div>
-							</div>
-							<div class="frame4-feature-container container">
-								<div class="frame4-feature-title absolute">&nbsp;</div>
-								<div class="frame4-feature1 absolute">&nbsp;</div>
-								<div class="frame4-feature2 absolute">&nbsp;</div>
-								<div class="frame4-feature3 absolute">&nbsp;</div>
-								<div class="frame4-feature4 absolute">&nbsp;</div>
-							</div>
-							<div class="frame2-lipstick-revolution container">
-								<div class="frame2-lipstick absolute">&nbsp;</div>
-								<div class="frame2-revolution absolute">&nbsp;</div>
-							</div>
+					<div class="cake2-container container">
+						<div class="cake2-content container">
+							<div class="cake2 absolute">&nbsp;</div>
 						</div>
 					</div>
-					<div class="frame5-container container">
-						<div class="frame5 container">
-							<div class="frame5-image absolute">&nbsp;</div>
-						</div>
+					<div class="text-container container">
+						<div class="text absolute">&nbsp;</div>
 					</div>
-					<div class="frame6-container container">
-						<div class="frame6 container">
-							<div class="frame6-model absolute">&nbsp;</div>
-							<div class="frame6-text-container container">
-								<div class="frame6-text absolute">&nbsp;</div>
-							</div>
-							<div class="frame6-cta-container container">
-								<div class="frame6-cta absolute">&nbsp;</div>
-							</div>
-							<div class="frame6-lipstick absolute">&nbsp;</div>
-							<div class="frame6-revolution absolute">&nbsp;</div>
+					<div class="cta-container container">
+						<div class="cta-content container">
+							<div class="cta absolute">&nbsp;</div>
 						</div>
-					</div>
-
-					<div class="logo absolute">&nbsp;</div>
+					</div>	
 				</div>
 			</div>
 		</div>
