Do French version

--- a/2016-04-22/source/french/160x600.html
+++ b/2016-04-22/source/french/160x600.html
@@ -6,7 +6,7 @@
     <meta name="ad.size" content="width=300,height=600">
     
     <!-- css -->
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./160x600.css">
 
     <script type="text/javascript">
         var clickTag = "http://www.google.ca";
@@ -39,7 +39,7 @@
 
         <!-- CopyText -->
         <div class="copytexts">
-            <div class="copytext  fromTop"><img src="copy1.png" alt=""></div>
+            <div class="copytext  fromTop"><img src="./images/160x600_copy1.png" alt=""></div>
         </div>
 
 
@@ -67,7 +67,7 @@
     <script src="./zepto-min-fx.js"></script>
 
     <!-- main -->
-    <script type="text/javascript" src="banner-min.js"></script> 
+    <script type="text/javascript" src="./160x600.js"></script> 
 
 
 </body>
