--- a/2016-04-22/source/french/300x600.html
+++ b/2016-04-22/source/french/300x600.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8" lang="en">
-    <meta name="ad.size" content="width=300,height=250">
+    <meta name="ad.size" content="width=300,height=600">
     
     <!-- css -->
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./300x600.css">
 
     <script type="text/javascript">
         var clickTag = "http://www.google.ca";
@@ -33,16 +33,13 @@
         </div>
 
 
-        <div class="footer  fromBottom"></div>
-
-
         <!-- logos -->
-        <div class="sprite  logo  fromBottom"></div>
+        <div class="sprite  logo  fromTop"></div>
 
 
         <!-- CopyText -->
         <div class="copytexts">
-            <div class="copytext  fromLeft"><img src="copy1.png" alt=""></div>
+            <div class="copytext  fromTop"><img src="./images/300x600_copy1.png" alt=""></div>
         </div>
 
 
@@ -70,7 +67,7 @@
     <script src="./zepto-min-fx.js"></script>
 
     <!-- main -->
-    <script type="text/javascript" src="banner-min.js"></script> 
+    <script type="text/javascript" src="300x600.js"></script> 
 
 
 </body>
