--- a/2016-04-22/source/french/728x90.html
+++ b/2016-04-22/source/french/728x90.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="UTF-8" lang="en">
-    <meta name="ad.size" content="width=300,height=600">
+    <meta name="ad.size" content="width=728,height=90">
     
     <!-- css -->
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./728x90.css">
 
     <script type="text/javascript">
         var clickTag = "http://www.google.ca";
@@ -28,18 +28,21 @@
             <div class="sprite  machine"></div>
             <div class="sprite  fromRight  bottle"></div>
             <div class="sprite  fromLeft  bear"></div>
-            <div class="sprite  fromLeft  rubber"></div>
+            <div class="sprite  fromRight  rubber"></div>
             <div class="sprite  fromRight  lid"></div>
         </div>
 
 
+        <div class="footer  fromRight"></div>
+
+
         <!-- logos -->
-        <div class="sprite  logo  fromTop"></div>
+        <div class="sprite  logo  fromRight"></div>
 
 
         <!-- CopyText -->
         <div class="copytexts">
-            <div class="copytext  fromTop"><img src="copy1.png" alt=""></div>
+            <div class="copytext  fromTop"><img src="./images/728x90_copy1.png" alt=""></div>
         </div>
 
 
@@ -48,7 +51,7 @@
 
 
         <!-- CTA -->
-        <a class="sprite  cta  fromBottom" onclick="javascript:window.open(window.clickTag)">
+        <a class="sprite  cta  fromRight" onclick="javascript:window.open(window.clickTag)">
             <!-- <img class="ctaShine" src="ctaShine.png"> -->
         </a>
 
@@ -67,7 +70,7 @@
     <script src="./zepto-min-fx.js"></script>
 
     <!-- main -->
-    <script type="text/javascript" src="banner-min.js"></script> 
+    <script type="text/javascript" src="./728x90.js"></script> 
 
 
 </body>
