--- a/2016-05-11/source/MTL/ENG/300x250.html
+++ b/2016-05-11/source/MTL/ENG/300x250.html
@@ -55,6 +55,7 @@
 					<div class="cta-container container">
 						<div class="cta absolute">&nbsp;</div>
 					</div>
+					<div class="border container">&nbsp;</div>
 				</div>
 			</div>
 		</div>
