--- a/2016-05-27/source/CT/300x250.html
+++ b/2016-05-27/source/CT/300x250.html
@@ -16,16 +16,15 @@
 					<div class="header-container container">
 						<div class="header absolute">&nbsp;</div>
 					</div>
-					<div class="text-container container">
-						<div class="text absolute">&nbsp;</div>
+					<div class="headline-container container">
+						<div class="headline absolute">&nbsp;</div>
 					</div>
 					<div class="cta-container container">
 						<div class="cta absolute">&nbsp;</div>
 					</div>
-					<div class="logo-container container">
-						<div class="logo absolute">&nbsp;</div>
-					</div>
-					<div class="border container">&nbsp;</div>
+					<div class="option-container container">
+						<div class="option absolute">&nbsp;</div>
+					</div>					
 				</div>
 			</div>
 		</div>
