--- a/2016-06-14/source/728x90.html
+++ b/2016-06-14/source/728x90.html
@@ -12,19 +12,43 @@
 		<div class="banner-container container">
 			<div class="content-container container">
 				<div class="content container">
-					<div class="background container">&nbsp;</div>
-					<div class="header-container container">
-						<div class="header absolute">&nbsp;</div>
-					</div>
-					<div class="headline-container container">
-						<div class="headline absolute">&nbsp;</div>
+					<div class="round absolute">&nbsp;</div>
+					<div class="title absolute">&nbsp;</div>
+					<div class="text absolute">&nbsp;</div>
+					<div class="device absolute">&nbsp;</div>
+					<div class="channel-container container">
+						<div class="channel1-container absolute">
+							<div class="channel1 absolute">&nbsp;</div>
+						</div>
+						<div class="channel2-container absolute">
+							<div class="channel2 absolute">&nbsp;</div>
+						</div>
+						<div class="channel4-container absolute">
+							<div class="channel4 absolute">&nbsp;</div>
+						</div>
+						<div class="channel5-container absolute">
+							<div class="channel5 absolute">&nbsp;</div>
+						</div>
+						<div class="channel6-container absolute">
+							<div class="channel6 absolute">&nbsp;</div>
+						</div>
+						<div class="channel8-container absolute">
+							<div class="channel8 absolute">&nbsp;</div>
+						</div>
+						<div class="channel7-container absolute">
+							<div class="channel7 absolute">&nbsp;</div>
+						</div>
+						<div class="channel3-container absolute">
+							<div class="channel3 absolute">&nbsp;</div>
+						</div>
+						<div class="channel9-container absolute">
+							<div class="channel9 absolute">&nbsp;</div>
+						</div>
 					</div>
 					<div class="cta-container container">
 						<div class="cta absolute">&nbsp;</div>
 					</div>
-					<div class="option-container container">
-						<div class="option absolute">&nbsp;</div>
-					</div>					
+					<div class="logo absolute">&nbsp;</div>
 				</div>
 			</div>
 		</div>
