Update Johnnie Walker project

--- a/2016-09-09/source/300x250.html
+++ b/2016-09-09/source/300x250.html
@@ -13,6 +13,12 @@
 				<div class="content container">
 					
 					<div class="header absolute">&nbsp;</div>
+					<!--
+					<div class="logo-container container">
+						<div class="logo absolute">&nbsp;</div>
+					</div>
+					-->
+					<!--
 					<div class="logo-small-wrapper container">
 						<div class="logo-small1-container container">
 							<div class="logo-small1 absolute">&nbsp;</div>
@@ -27,6 +33,7 @@
 							<div class="logo-small4 absolute">&nbsp;</div>
 						</div>
 					</div>
+					-->
 
 					<div class="logo-big1-container container">
 						<div class="logo-big1 absolute">&nbsp;</div>
