Update Desjardins Carte Scolaire IO - Animation Brief

--- a/2016-09-14/source/300x250/300x250.html
+++ b/2016-09-14/source/300x250/300x250.html
@@ -55,6 +55,8 @@
             margin:0px;
         }
 	</style>
+
+    <link rel="stylesheet" type="text/css" href="300x250.css">
 	<!-- copy these lines to your document head: -->
 
 	<meta name="viewport" content="user-scalable=yes, width=300" />
@@ -67,9 +69,42 @@
     <body>
 	<!-- copy these lines to your document: -->
 
-    <div id="index_hype_container" style="cursor:pointer;margin:auto;position:relative;width:300px;height:250px;overflow:hidden;" aria-live="polite">
-	<script type="text/javascript" charset="utf-8" src="300x250_index_hype_generated_script.js?82342"></script>
-	</div>
+    <div class="banner-container container">
+        <div class="content container">
+            <div class="frame1-wrapper container">
+                <div class="frame1-container container">
+                    <div class="white-square absolute">&nbsp;</div>
+                    <div class="children-image absolute">&nbsp;</div>
+
+                    <div class="frame1-title-container container">
+                        <div class="frame1-title absolute">&nbsp;</div>
+                    </div>
+                    
+                    <div class="frame1-text-container container">
+                        <div class="frame1-text absolute">&nbsp;</div>
+                    </div>
+                </div>
+            </div>
+            <div class="frame3-container container">
+                <div class="frame3-title-container container">
+                    <div class="frame3-title absolute">&nbsp;</div>
+                </div>
+                <div class="frame3-text-container container">
+                    <div class="frame3-text absolute">&nbsp;</div>
+                </div>
+
+                <div class="footer-container container">
+                    <div class="footer absolute">&nbsp;</div>
+                </div>
+                <div class="logo-container container">
+                    <div class="logo absolute">&nbsp;</div>
+                </div>
+                <div class="cta-container container">
+                    <div class="cta absolute">&nbsp;</div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 	<!-- end copy -->
 	<script type="text/javascript">
