Do Client: Casino Rama

--- a/2016-10-03/source/320x50.html
+++ b/2016-10-03/source/320x50.html
@@ -6,33 +6,26 @@
 		<title>
 			Banner Animation
 		</title>
-		<link rel="stylesheet" type="text/css" href="320x50_mill.css">
+		<link rel="stylesheet" type="text/css" href="320x50.css">
 	</head>
 	<body>
 		<div class="banner-container container">
 			<div class="content-container container">
 				<div class="content container">
-					<div class="logo-container container">
-						<div class="logo container">&nbsp;</div>
-					</div>
-					<div class="header-container container">
-						<div class="header container">&nbsp;</div>
-					</div>
-					<div class="text-man-container container">
+					<div class="bg container">&nbsp;</div>
+					<div class="logo absolute">&nbsp;</div>
+					<div class="text-container container">
 						<div class="text absolute">&nbsp;</div>
-						<div class="man absolute">&nbsp;</div>
-					</div>
-					<div class="container">
-						<div class="man-full-mask absolute">
-							<div class="man-full absolute">&nbsp;</div>
-						</div>
-					</div>
-					<div class="container">
-						<div class="man-full-ie absolute">&nbsp;</div>
 					</div>
 					<div class="cta-container container">
 						<div class="cta absolute">&nbsp;</div>
 					</div>
+					<div class="building-wrapper container">
+						<div class="building-container absolute">
+							<div class="building absolute">&nbsp;</div>
+						</div>
+					</div>
+					<div class="legal absolute">&nbsp;</div>
 				</div>
 			</div>
 		</div>
