--- a/2016-10-05/source/320x50.html
+++ b/2016-10-05/source/320x50.html
@@ -13,8 +13,11 @@
 			<div class="content-container container">
 				<div class="content container">
 					<div class="content-wrapper container">
-						<div class="logo absolute">&nbsp;</div>
 						<div class="image absolute">&nbsp;</div>
+						<div class="steel absolute">&nbsp;</div>
+						<div class="background absolute">&nbsp;</div>
+
+						<div class="logo absolute">&nbsp;</div>
 						<div class="text absolute">&nbsp;</div>
 						<div class="cta absolute">&nbsp;</div>
 					</div>
