Update for feedback from the client

--- a/2016-10-03/source/728x90.html
+++ b/2016-10-03/source/728x90.html
@@ -17,9 +17,27 @@
 					<div class="text-container container">
 						<div class="text absolute">&nbsp;</div>
 					</div>
-					<div class="cta-container container">
+					<div class="dots-container container">
+						<div class="dot1-1 absolute dot">&nbsp;</div>
+						<div class="dot1-2 absolute dot">&nbsp;</div>
+						<div class="dot1-3 absolute dot">&nbsp;</div>
+						<div class="dot1-4 absolute dot">&nbsp;</div>
+						<div class="dot1-5 absolute dot">&nbsp;</div>
+						<div class="dot1-6 absolute dot">&nbsp;</div>
+
 						<div class="cta absolute">&nbsp;</div>
+
+						<div class="dot2-1 absolute dot">&nbsp;</div>
+						<div class="dot2-2 absolute dot">&nbsp;</div>
+						<div class="dot2-3 absolute dot">&nbsp;</div>
+						<div class="dot2-4 absolute dot">&nbsp;</div>
+						<div class="dot2-5 absolute dot">&nbsp;</div>
+						<div class="dot2-6 absolute dot">&nbsp;</div>
+						<div class="dot2-7 absolute dot">&nbsp;</div>
+						<div class="dot2-8 absolute dot">&nbsp;</div>
 					</div>
+					<div class="dots-ie absolute">&nbsp;</div>
+
 					<div class="building-wrapper container">
 						<div class="building-container absolute">
 							<div class="building absolute">&nbsp;</div>
