--- a/2016-10-03/source/300x250.html
+++ b/2016-10-03/source/300x250.html
@@ -20,7 +20,7 @@
 					</div>
 
 					<div class="frame2-container container">
-						<div class="frame2-bg container">&nbsp;</div>
+						<div class="frame2-bg absolute">&nbsp;</div>
 						<div class="frame2-text absolute">&nbsp;</div>
 						<div class="frame2-logo absolute">&nbsp;</div>
 						<div class="frame2-dots-container container">
